[tool.poetry]
name = "api-workshop"
version = "0.1.0"
description = ""
authors = ["marcus santos"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
uvicorn = "^0.24.0.post1"
pytest = "^7.4.3"
taskipy = "^1.12.0"
httpx = "^0.25.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
run = "uvicorn main:app --reload"
test = "pytest test.py -v"
kill = "kill -9 $(lsof -t -i:8000)"